[project]
name = "social-comment-env"
version = "0.1.0"
description = "A social media comment moderation environment"
authors = [{ name = "Sid" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"